# context-system

./: .gitignore  AGENTS.md  AGENTS.md.backup  CLAUDE.md  PACK_SPEC.md  PLAN.md  README.md  SPEC.md  gantry.yaml  install.sh  pyproject.toml
.agf-workspace/: skills-index.sqlite
.bob/notes/: pending-notes.txt
.claude/: settings.json
.eval/: module.yaml  out.jsonl
.eval-zconfig-p1/: module.yaml
.eval-zconfig-p1/chunks/: docs.jsonl
.eval-zconfig-p1/content/: README.md  architecture__cics__Caching_Inputs__caching_inputs_csd.md  architecture__cics__Caching_Inputs__gcd_lcd_behaviour.md  architecture__cics__extra_dds.md  architecture__framework__passing_variables_to_config.md  architecture__framework__state.md
.eval-zconfig-p2/chunks/: docs.jsonl
.eval-zconfig-p2/content/: development__testing.md
.eval-zconfig-p3/chunks/: docs.jsonl
.eval-zconfig-p3/content/: architecture__architecture.md  architecture__cics__Caching_Inputs__caching_inputs.md  architecture__cics__dcb_support.md  architecture__cics__resource_builder.md  architecture__cics__unix_file_high_level_mechanism.md  (+1 more)
.gantry/: UPGRADE_PROMPT.md
.venv-test/: pyvenv.cfg
config/: CLAUDE_PERMISSIONS_SPEC.md
prompts/: chunking-evaluation-prompt.md  testing-plan-prompt.md
specs/: BOB_SPEC.md
tests/: conftest.py  test_bob_integration.py  test_boxnote.py  test_chunker.py  test_claude_code.py  test_cli.py  test_contextualize.py  test_definition_chunker.py  test_deps.py  test_docx_error_handling.py  test_extractors.py  test_freshness.py  test_git.py  test_module.py  test_pack.py  test_schema.py
(+72 files in other folders)
